# free_similarity_search

./: Dockerfile  README.md  build.sh  pyproject.toml
data/: train-v1.1.csv
jsquad/: chroma.sqlite3  config.ini
src/cli/: __init__.py  __main__.py
src/database/: __init__.py
src/free_similarity_search/: __init__.py
