[project]
name = "free-similarity-search"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kotauchisunsun", email = "kotauchisunshine@hotmail.co.jp" }
]
dependencies = [
    "fastapi>=0.111.0",
    "scapy>=2.5.0",
    "chromadb>=0.5.0",
    "langchain>=0.1.17",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
server = { cmd = "python src/free_similarity_search/main.py"}

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/free_similarity_search"]
