[project]
name = "free-similarity-search"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kotauchisunsun", email = "kotauchisunshine@hotmail.co.jp" }
]
dependencies = [
    "fastapi==0.95.2",
    "scapy>=2.5.0",
    "chromadb==0.4.0",
    "langchain>=0.1.17",
    "langchain-chroma>=0.1.0",
    "spacy>=3.7.4",
    "tqdm>=4.66.4",
    "ja-core-news-md @ https://github.com/explosion/spacy-models/releases/download/ja_core_news_md-3.7.0/ja_core_news_md-3.7.0-py3-none-any.whl",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "fire>=0.6.0",
    "tqdm>=4.66.4",
]

[tool.rye.scripts]
server = { cmd = "python src/free_similarity_search/main.py"}

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/free_similarity_search"]
